added support for gitlab private using ssh keys

--- a/git-repository-updater/Dockerfile
+++ b/git-repository-updater/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get install -yy bc git
 RUN mkdir /gitTemp && chown user /gitTemp
 
 RUN mkdir /home/user/.ssh &&\
-  printf "Host github.com\n\tStrictHostKeyChecking no\n" >> /home/user/.ssh/config &&\
+  printf "Host *\n\tStrictHostKeyChecking no\n" >> /home/user/.ssh/config &&\
   touch /home/user/.ssh/known_hosts &&\
   chown user /home/user/.ssh/known_hosts
 
