--- a/.github/workflows/kubesec-analysis.yml
+++ b/.github/workflows/kubesec-analysis.yml
@@ -26,10 +26,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Package
+        run: |-
+          mkdir ./build
+          mkdir ./build/input
+          chmod -R 777 ./manifests
+          docker run --mount "type=bind,src=$(pwd)/manifests,dst=/src" \
+            ghcr.io/srfrnk/k8s-jsonnet-manifest-packager:latest -- /src \
+            --tla-str 'imagePrefix=${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}' \
+            --tla-str 'buildNumber=${{env.VERSION}}.${{env.BUILD_NUMBER}}' \
+            --tla-str 'namespace=${{env.NAMESPACE}}' \
+            --tla-str 'debug=false' \
+            > ./build/jabos-manifests.yaml
+          
       - name: Run kubesec scanner
         uses: controlplaneio/kubesec-action@43d0ddff5ffee89a6bb9f29b64cd865411137b14
         with:
-          input: file.yaml # specify configuration file to scan here
+          input: ./build/jabos-manifests.yaml
           format: template
           template: template/sarif.tpl
           output: kubesec-results.sarif
