--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -54,6 +54,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           image: ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}kubectl
+          args: --file=kubectl/Dockerfile
       - uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: snyk.sarif
