--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,6 @@ jobs:
           echo start
       - uses: ./.github/workflows/my-action
         id: hello
-      - run |-
-          echo "${{ hello.outputs.what }}"
+      - run: echo "${{ steps.hello.outputs.what }}"
       - run: |-
           echo end
