test cusom action

--- a/.github/workflows/image/action.yml
+++ b/.github/workflows/image/action.yml
@@ -10,6 +10,7 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v2
     - uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       env:
         IMAGE_NAME: ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}${{inputs.name}}
