--- a/.github/workflows/actions/image/action.yml
+++ b/.github/workflows/actions/image/action.yml
@@ -21,6 +21,7 @@ runs:
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new
     - uses: snyk/actions/docker@14818c4695ecc4045f33c9cee9e795a788711ca4
+      continue-on-error: true
       with:
         image: ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}${{inputs.name}}
         args: --file=${{inputs.context}}/Dockerfile
