--- a/.github/workflows/actions/image/action.yml
+++ b/.github/workflows/actions/image/action.yml
@@ -20,11 +20,8 @@ runs:
         tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}.${{env.BUILD_NUMBER}} , ${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new
-    - uses: snyk/actions/docker@14818c4695ecc4045f33c9cee9e795a788711ca4
-      continue-on-error: true
-      with:
-        image: ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}${{inputs.name}}
-        args: --file=${{inputs.context}}/Dockerfile
+    - run: snyk test --file=${{inputs.context}}/Dockerfile || true
+      shell: bash
     - uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: snyk.sarif
