--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -38,6 +38,11 @@ jobs:
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
 
+      - uses: snyk/actions/setup@master
+      - uses: actions/setup-go@v1
+        with:
+          go-version: "1.13"
+
       - name: kubectl
         uses: ./.github/workflows/actions/image
         env:
