--- a/.github/workflows/actions/image/action.yml
+++ b/.github/workflows/actions/image/action.yml
@@ -20,7 +20,7 @@ runs:
         tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}.${{env.BUILD_NUMBER}} , ${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new
-    - run: snyk test --sarif-file-output=snyk.sarif --file "${{inputs.context}}/Dockerfile" --docker "${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}${{inputs.name}}" || true
+    - run: snyk test --sarif-file-output=snyk.sarif --file="${{inputs.context}}/Dockerfile" --docker "${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}${{inputs.name}}" || true
       shell: bash
     - uses: github/codeql-action/upload-sarif@v1
       with:
