--- a/.github/workflows/actions/image/action.yml
+++ b/.github/workflows/actions/image/action.yml
@@ -30,3 +30,4 @@ runs:
     - uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: snyk.sarif
+        category: ${{inputs.name}}
