--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -185,6 +185,9 @@ jobs:
 
       - run: snyk test --sarif-file-output=snyk.sarif --file="./build/jabos-manifests.yaml" || true
         shell: bash
+        env:
+          SNYK_TOKEN: ${{secrets.SNYK_TOKEN}}
+
       - uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: snyk.sarif
