--- a/base-manifest-builder/Dockerfile
+++ b/base-manifest-builder/Dockerfile
@@ -1,14 +1,16 @@
 FROM alpine
 
-RUN apk add --update curl wget git bash
+RUN apk add --update curl wget
+
+RUN adduser -s /bin/bash -S user
+
+RUN mkdir /build && chown user /build
 
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
   chmod +x /usr/bin/yq
 
-RUN adduser -s /bin/bash -S user
-
-COPY ./init.sh /
+COPY ./build.sh /
 
 USER user
 
-ENTRYPOINT ["/init.sh"]
+ENTRYPOINT ["/build.sh"]
