--- a/plain-manifest-builder/Dockerfile
+++ b/plain-manifest-builder/Dockerfile
@@ -1,17 +1,10 @@
-FROM ubuntu
+ARG IMAGE_PREFIX
+ARG IMAGE_VERSION
 
-RUN apt-get update -y &&\
-  apt-get install -yy curl wget
+FROM ${IMAGE_PREFIX}base-manifest-builder${IMAGE_VERSION} as base-manifest-builder
 
-RUN useradd -ms /bin/bash user
-
-RUN mkdir /build && chown user /build
-
-RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
-  chmod +x /usr/bin/yq
+USER root
 
 COPY ./build.sh /
 
 USER user
-
-ENTRYPOINT ["/build.sh"]
