--- a/pre-builder/Dockerfile
+++ b/pre-builder/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine
 
 RUN apk add --update curl git bash openssh-client
 
-RUN adduser -s /bin/bash -S user
+RUN adduser -s /bin/bash -S user -u 1000
 
 RUN mkdir /home/user/.ssh &&\
   printf "Host *\n\tStrictHostKeyChecking no\n" >> /home/user/.ssh/config &&\
@@ -11,6 +11,6 @@ RUN mkdir /home/user/.ssh &&\
 
 COPY ./pre-build.sh /
 
-USER user
+USER 1000
 
 ENTRYPOINT ["/pre-build.sh"]
