--- a/docker-image-builder-init/Dockerfile
+++ b/docker-image-builder-init/Dockerfile
@@ -5,10 +5,10 @@ RUN apk add --update curl wget git bash
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
   chmod +x /usr/bin/yq
 
-RUN adduser -s /bin/bash -S user
+RUN adduser -s /bin/bash -S user -u 1000
 
 COPY ./init.sh /
 
-USER user
+USER 1000
 
 ENTRYPOINT ["/init.sh"]
