--- a/docker-image-builder-init/Dockerfile
+++ b/docker-image-builder-init/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine
 
-RUN apk add --update curl wget git bash
+RUN apk add --update curl wget bash
 
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
   chmod +x /usr/bin/yq
