--- a/operator/package.json
+++ b/operator/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon index.ts",
+    "compile": "cdk8s import && tsc --noEmit"
   },
   "author": "srfrnk@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "cdk8s": "^1.5.7",
+    "cdk8s-plus-22": "^1.0.0-beta.108",
+    "constructs": "^3.3.208",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
     "prom-client": "^14.0.1"
@@ -19,6 +23,7 @@
     "@types/node": "^16.10.1",
     "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "cdk8s-cli": "^1.0.92"
   }
 }
