--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,21 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "type": "node",
+            "name": "vscode-jest-tests",
+            "request": "launch",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true,
+            "program": "${workspaceFolder}/npx",
+            "cwd": "${workspaceFolder}",
+            "args": [
+                "jest",
+                "--runInBand",
+                "--watchAll=false"
+            ]
+        }
+    ]
 }
