--- a/operator/package.json
+++ b/operator/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "nodemon index.ts",
-    "compile": "cdk8s import && tsc --noEmit"
+    "compile": "cdk8s import && tsc --noEmit",
+    "test": "jest"
   },
   "author": "srfrnk@gmail.com",
   "license": "MIT",
@@ -20,10 +21,15 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-prometheus-middleware": "^1.2.1",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.10.1",
+    "cdk8s-cli": "^1.0.92",
+    "jest": "^27.5.1",
+    "jest-github-reporter": "^1.0.2",
     "nodemon": "^2.0.13",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
-    "cdk8s-cli": "^1.0.92"
+    "jest-coverage-badges": "^1.1.2"
   }
 }
