--- a/operator/package.json
+++ b/operator/package.json
@@ -29,7 +29,6 @@
     "nodemon": "^2.0.13",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "jest-coverage-badges": "^1.1.2"
+    "typescript": "^4.4.3"
   }
 }
